--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -14,11 +14,15 @@
   "content_scripts": [{
     "matches": ["<all_urls>"],
 	"run_at": "document_idle",
-    "css": ["injected/injected.css"],
+    "css": [
+      "style.css",
+      "injected/injected.css"
+    ],
     "js": [
-		"injected/language-processing.js",
-		"injected/sentence-document.js",
-		"injected/page-content.js",
+		"terse/language-processing.js",
+		"terse/sentence-document.js",
+		"terse/page-content.js",
+    "terse/processor.js",
 		"injected/injected.js"
 	]
   }],
