Implemented settings, updated CSS, options page

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -19,6 +19,7 @@
       "injected/injected.css"
     ],
     "js": [
+    "terse/constants.js",
 		"terse/language-processing.js",
 		"terse/sentence-document.js",
 		"terse/page-content.js",
