--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -4,24 +4,34 @@
   "version": "1.0",
   "manifest_version": 3,
   "options_page": "options/options.html",
+  "web_accessible_resources": [
+    {
+      "resources": [ "fonts/*.woff2", "images/*.*" ],
+      "matches": [
+        "<all_urls>"
+      ]
+    }
+  ],
   "background": {
     "service_worker": "install.js"
   },
-  "content_scripts": [{
-    "matches": ["<all_urls>"],
-	"run_at": "document_idle",
-    "css": [
-      "style.css"
-    ],
-    "js": [
-      "js/tests.js",
-      "js/language-processing.js",
-      "js/sentence-document.js",
-      "js/page-content.js",
-      "injected/injected.js"
-    ]
-  }],
-  "permissions": ["storage", "activeTab", "scripting"],
+  "content_scripts": [
+    {
+      "matches": [ "<all_urls>" ],
+      "run_at": "document_idle",
+      "css": [
+        "style.css"
+      ],
+      "js": [
+        "js/tests.js",
+        "js/language-processing.js",
+        "js/sentence-document.js",
+        "js/page-content.js",
+        "injected/injected.js"
+      ]
+    }
+  ],
+  "permissions": [ "storage", "activeTab", "scripting" ],
   "action": {
     "default_popup": "popup/popup.html",
     "default_icon": {
