renamed project to 'Tilder' to free up the use of 'terse' for future libraries

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Terse",
+  "name": "Tilder",
   "description": "Document summation for Google Chrome",
   "version": "1.0",
   "manifest_version": 3,
